# CipherAlghorithm

./: CMakeLists.txt  CipherLogic.cpp  CipherLogic.h  Main.qml  cipher-algorithm.desktop  kursach.cpp  main.cpp
.github/workflows/: build.yml
